@@ -1,3 +1,5 @@
+- fix "No GSettings schemas are installed on the system" error when inspecting
+  partitions (mga#12279)
 - services:
   o use --no-block with chkconfig and systemctl enable to prevent systemd reload
     and potential crash (especially during first/live boot)
